--- a/Transformer.ipynb
+++ b/Transformer.ipynb
@@ -112,6 +112,7 @@
     }
    ],
    "source": [
+    "# !pip install transformers\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "import torch\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"distilgpt2\") \n",
